tests/lean/issue136.lean.expected.out
issue136.lean:6:29: error: oh no
issue136.lean:6:0: warning: declaration '[anonymous]' uses sorry
